Tested and fully sets up a compute node once basic os is provisioned.
All tested now but you have to del and add the nodes to the gpfs
cluster on one of the admin nodes before running the hardac play.
Ganglia role is also included now.

--- a/common/handlers/main.yml
+++ b/common/handlers/main.yml
@@ -1,8 +1,7 @@
 ---
 
 - name: Rehash OpenLDAP Cacerts
-  command: >
-      cacertdir_rehash /etc/openldap/cacerts
+  command: cacertdir_rehash /etc/openldap/cacerts
 
 - name: Reload sssd
   service:
