--- a/hpc/files/slurm.conf
+++ b/hpc/files/slurm.conf
@@ -165,14 +165,15 @@ SlurmdDebug=3
 NodeName=hardac-node[01-08]-[1-4] Sockets=2 CoresPerSocket=8 ThreadsPerCore=2 RealMemory=127995 State=UNKNOWN
 NodeName=hardac-node[09-10]-[1-4] Sockets=2 CoresPerSocket=8 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
 NodeName=hardac-node[11-13]-[1-4] Sockets=2 CoresPerSocket=14 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
+NodeName=x2-0[1-4]-[1-4] Sockets=2 CoresPerSocket=14 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
 #NodeName=hardac-node00            Sockets=2 CoresPerSocket=8 ThreadsPerCore=2 RealMemory=64379 State=UNKNOWN
 
 # PARTITIONS
 #PartitionName=lowmem       Nodes=hardac-node[02-08]-[1-4],hardac-node01-[2-4] Priority=40 Default=YES MaxTime=INFINITE State=UP
 #PartitionName=himem        Nodes=hardac-node[09-10]-[1-4] Priority=50 Default=NO  MaxTime=INFINITE State=UP
-PartitionName=all          Nodes=hardac-node[02-10]-[1-4],hardac-node01-[3-4] Priority=40 Default=YES  MaxTime=INFINITE State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab
-PartitionName=interactive  Nodes=hardac-node01-1            Priority=40 Default=NO  MaxTime=1-0 State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab
+PartitionName=all          Nodes=hardac-node[02-10]-[1-4],hardac-node01-[3-4] Priority=40 Default=YES  MaxTime=INFINITE State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab,harteminklab,wraycompute
+PartitionName=interactive  Nodes=hardac-node01-1            Priority=40 Default=NO  MaxTime=1-0 State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab,harteminklab,wraycompute
 #PartitionName=new          Nodes=hardac-node[11-13]-[1-4] Priority=40 Default=NO MaxTime=INFINITE State=UP AllowedQOS=new_nodes
 PartitionName=new          Nodes=hardac-node[11-13]-[1-4] Priority=40 Default=NO MaxTime=INFINITE State=UP AllowAccounts=reddylab,itlab
 #PartitionName=highpriority Nodes=hardac-node01-[1-4] Priority=100 Default=NO MaxTime=INFINITE State=UP
-
+PartitionName=testing      Nodes=x2-0[1-4]-[1-4] Priority=40 Default=NO MaxTime=INFINITE State=UP AllowAccounts=itlab
