--- a/common/tasks/auth.yml
+++ b/common/tasks/auth.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Copy ldap.conf
+  template: src=ldap.conf.j2 dest=/etc/openldap/ldap.conf owner=root group=root mode=0644
+
 - name: Create cacert directory
   file:
     path: /etc/openldap/cacerts
@@ -8,7 +11,6 @@
     group: root
     mode: 0755
     force: no
-    notify: Rehash OpenLDAP Cacerts
 
 - name: Copy OpenLDAP cert
   copy:
@@ -16,14 +18,14 @@
     dest: /etc/openldap/cacerts/idms-authdir.pem
     owner: root
     group: root
-    mode: 622
+    mode: 644
     force: no
-    notify: Rehash OpenLDAP Cacerts
-
-- name: Setup auth
-  command: >
-     authconfig --enablesssd --enablesssdauth --disableldap --disableldapauth --disablekrb5 --update
+  notify: Rehash OpenLDAP Cacerts
 
 - name: Copy sssd conf
   action: template src=sssd.j2 dest=/etc/sssd/sssd.conf owner=root group=root mode=0600
   notify: Reload sssd
+
+- name: Setup auth
+  command: >
+     authconfig --enablesssd --enablesssdauth --disableldap --disableldapauth --disablekrb5 --update
