Many changes to the deployment process that handle older compute nodes
Able to handle the configuration of either ib0 or ib1 on systems. Added many
host vars for new and old systems. Added admin staff to sudoers and do
no allow regular accounts to ssh into compute nodes. Many other small changes
to hosts file, slurm configuration, ganglia multicast usage and multicast
routing.

--- a/hpc/tasks/main.yml
+++ b/hpc/tasks/main.yml
@@ -121,3 +121,14 @@
     user: root
     key: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/sm_id_rsa.pub') }}"
 
+- name: clone perl wrapper from git
+  git:
+    repo: https://github.com/Duke-GCB/ScriptWrapper.git
+    dest: /tmp/ScriptWrapper
+
+- name: copy perl script wrapper script
+  copy:
+    remote_src: True
+    src: /tmp/ScriptWrapper/scriptwrapper.sh
+    dest: /usr/local/bin/perl
+    mode: 0755
