--- a/ansible-deploy-user/tasks/main.yml
+++ b/ansible-deploy-user/tasks/main.yml
@@ -18,10 +18,17 @@
   shell: sudo chown {{ deploy.user }}:{{ deploy.group }} /tmp
   when: deploy.take_ownership_of_tmp == "true" and t.stat.pw_name != "{{ deploy.user }}"
 
-- name: Set up authorized_keys for the deploy user 
+- name: Set up authorized_keys for the deploy user
   authorized_key:
     user: "{{ deploy.user }}"
-    key: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/id_rsa.pub') }}" 
+    key: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/id_rsa.pub') }}"
+  tags:
+    - key
+
+- name: Set up authorized_keys for the root user
+  authorized_key:
+    user: root
+    key: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/root_id_rsa.pub') }}"
   tags:
     - key
 
