--- a/common/tasks/auth.yml
+++ b/common/tasks/auth.yml
@@ -28,4 +28,33 @@
 
 - name: Setup auth
   command: >
-     authconfig --enablesssd --enablesssdauth --disableldap --disableldapauth --disablekrb5 --update
+    authconfig --enablesssd --enablesssdauth --disableldap --disableldapauth --disablekrb5 --update
+
+- name: sshd configuration file update
+  template:
+    src: sshd_config.j2
+    dest: /etc/ssh/sshd_config
+    backup: yes
+    owner: root
+    group: root
+    mode: 0644
+    validate: '/usr/sbin/sshd -T -f %s'
+  notify:
+    - restart sshd
+
+- name: sudoers configuration file update
+  template:
+    src: sudoers.j2
+    dest: /etc/sudoers
+    backup: yes
+    owner: root
+    group: root
+    mode: 0440
+
+- name: copy ssh banner warning
+  template:
+    src: issue.net.j2
+    dest: /etc/issue.net
+    owner: root
+    group: root
+    mode: 0444
