Remove stacki repos after deployment and allow perl module overwrite
We don't need the stacki repos after install. There was also an issue
with checking out the perl wrapper from git when the repo already existed
on the local system.

--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -34,6 +34,14 @@
   yum: name={{ item }} state=present
   with_items: "{{ base_packages }}"
 
+- name: Remove stacki repo
+  when: ansible_os_family == 'RedHat'
+  become: yes
+  become_method: sudo
+  file:
+    state: absent
+    path: /etc/yum.repos.d/stacki.repo
+
 - name: Reboot
   become: yes
   become_method: sudo
