Added more HARDAC nodes to the cluster, tweaked packages and minor changes to playbook.
All nodes in the cluster now have host vars. Removed lua-devel from the list of packages
required. Running the cacert rehash always since that was causing some issues with nodes
if they failed execution the first time. Slurm is being installed from satellite repo now,
not from rpm files in gpfs.

--- a/ansible-deploy-user/tasks/main.yml
+++ b/ansible-deploy-user/tasks/main.yml
@@ -9,7 +9,7 @@
   copy: content="%{{ deploy.user }} ALL=(ALL) NOPASSWD:ALL" dest="/etc/sudoers.d/{{ deploy.user }}" owner=root group=root mode=0440
 
 - name: Create user
-  user: name={{ deploy.user }} state=present group={{ deploy.group }} shell=/bin/bash home={{ deploy.home_dir }}{{ deploy.user }} uid={{ deploy.uid }}
+  user: name={{ deploy.user }} state=present group={{ deploy.group }} shell=/bin/bash home={{ deploy.home_dir }} uid={{ deploy.uid }}
 
 - stat: path=/tmp
   register: t
