Updates imads to use docker_container module instead of deprecated docker module
- The [docker module](http://docs.ansible.com/ansible/docker_module.html) is deprecated in ansible 2.2 and breaks with current versions of docker-py
- The [docker_container module](https://docs.ansible.com/ansible/docker_container_module.html) is the replacement, with saner defaults
- The behavior of `state: reloaded` (ensure container is started and restart of image or config changed) is now the default behavior of `state: started`
- Forcing a container restart is done by `restart=true`
- networks are now specified as a list
- `pull: always` is now `pull:true`

--- a/imads_webapp/tasks/setup_portal.yml
+++ b/imads_webapp/tasks/setup_portal.yml
@@ -1,10 +1,11 @@
 # Runs webserver that reads database and sends jobs to worker daemon.
 
 - name: Create web portal container
-  docker:
+  docker_container:
     image: dukegcb/imads-apache
     name: web
-    net: "{{ imads.network }}"
+    networks:
+      - name: "{{ imads.network }}"
     env: "{{ imads.env }}"
     volumes:
       - /etc/external/:/etc/external/
@@ -12,6 +13,6 @@
     ports:
       - "80:80"
       - "443:443"
-    pull: always
-    state: reloaded
+    pull: true
+    state: started
     restart_policy: always
