--- a/imads_webapp/tasks/main.yml
+++ b/imads_webapp/tasks/main.yml
@@ -12,28 +12,29 @@
   file: path="{{ imads.data_root }}/pred_data/work" state=directory mode="a+rwx"
 
 # Create database
-- include: tasks/setup_postgres.yml db_state=reloaded db_config=normal
+- include: tasks/setup_postgres.yml db_restart=false db_config=normal
 
 - stat: path="{{ imads.data_root }}/pred_data/loaded.txt"
   register: pred_data_loaded
 
 # Populate database
 
-- include: tasks/setup_postgres.yml db_state=restarted db_config=load
+- include: tasks/setup_postgres.yml db_restart=true db_config=load
   when: pred_data_loaded.stat.isreg is not defined
 
 - name: Initial download and load database with prediction data
   when: pred_data_loaded.stat.isreg is not defined
-  docker:
+  docker_container:
     image: dukegcb/imads
-    net: "{{ imads.network }}"
+    networks:
+      - name: "{{ imads.network }}"
     env: "{{ imads.env }}"
     command: python load.py download
-    detach: False
+    detach: false
     volumes:
       - /etc/external/:/etc/external/
       - "{{ imads.data_root }}/pred_data:/tmp/pred_data"
-    pull: always
+    pull: true
 
 - name: Create finished loading text file
   when: pred_data_loaded.stat.isreg is not defined
@@ -41,7 +42,7 @@
 
 # Setup production database settings
 
-- include: tasks/setup_postgres.yml db_state=restarted  db_config=production
+- include: tasks/setup_postgres.yml db_restart=true db_config=production
   when: pred_data_loaded.stat.isreg is not defined
 
 # Start web portal, vacuum daemon, and worker
