bespin_ui set api js config and run in apache
Still need to handle rewriting urls and certs
Also fixed a couple places to force git clone because of local(intentional) modifications.

--- a/bespin_api/tasks/main.yml
+++ b/bespin_api/tasks/main.yml
@@ -13,6 +13,7 @@
     repo: https://github.com/Duke-GCB/bespin-api.git
     dest: /srv/bespin_api
     version: prod_settings
+    force: yes
 
 - pip:
     requirements: /srv/bespin_api/requirements.txt
