central config group_vars/bespin_settings

--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -1,3 +1,28 @@
+- set_fact:
+    lando_config: |
+      work_queue:
+        host: "{{ bespin_settings.rabbit.host }}"
+        username: "{{ bespin_settings.rabbit.username }}"
+        password: "{{ bespin_settings.rabbit.password }}"
+        listen_queue: "{{ bespin_settings.rabbit.listen_queue }}"
+        worker_username: "{{ bespin_settings.rabbit.worker_username }}"
+        worker_password: "{{ bespin_settings.rabbit.worker_password }}"
+      vm_settings:
+        worker_image_name: "{{ bespin_settings.worker_vm.image_name }}"
+        ssh_key_name: "{{ bespin_settings.worker_vm.ssh_key_name }}"
+        network_name: "{{ bespin_settings.worker_vm.network_name }}"
+        floating_ip_pool_name: "{{ bespin_settings.worker_vm.floating_ip_pool_name }}"
+        default_favor_name: "{{ bespin_settings.worker_vm.default_favor_name }}"
+      cloud_settings:
+        auth_url: "{{ bespin_settings.worker_openstack.auth_url }}"
+        username: "{{ bespin_settings.worker_openstack.username }}"
+        password: "{{ bespin_settings.worker_openstack.password }}"
+        user_domain_name: "{{ bespin_settings.worker_openstack.user_domain_name }}"
+        project_domain_name: "{{ bespin_settings.worker_openstack.project_domain_name }}"
+      bespin_api:
+        url: "{{ bespin_settings.api.url }}"
+        token: "{{ bespin_settings.api.lando_token }}"
+
 - name: Update apt cache
   apt: update_cache=yes
 
@@ -17,7 +42,7 @@
 - name: Setup lando config
   blockinfile:
     dest: /etc/lando_config.yml
-    block: "{{ bespin_lando.config }}"
+    block: "{{ lando_config }}"
     create: yes
 
 - file:
