--- a/bespin_api/tasks/main.yml
+++ b/bespin_api/tasks/main.yml
@@ -1,3 +1,15 @@
+- set_fact:
+    api_environment: "{{ api_environment|default({}) | combine(item) }}"
+  with_items:
+    - BESPIN_SECRET_KEY: "{{ bespin_settings.api.secret_key }}"
+    - BESPIN_ALLOWED_HOST: "{{ bespin_settings.api.allowed_host }}"
+    - BESPIN_DB_NAME: "{{ bespin_settings.database.name }}"
+    - BESPIN_DB_USER: "{{ bespin_settings.database.username }}"
+    - BESPIN_DB_PASSWORD: "{{ bespin_settings.database.password }}"
+    - BESPIN_DB_HOST: "{{ bespin_settings.database.host }}"
+    - BESPIN_CORS_HOST: "{{ bespin_settings.api.cors_host }}"
+    - BESPIN_STATIC_ROOT: /srv/static
+
 - name: Update apt cache
   apt: update_cache=yes
 
@@ -27,9 +39,7 @@
   command: python manage.py collectstatic --noinput --settings=bespin.settings_prod
   args:
     chdir: /srv/bespin_api/
-  environment:
-    BESPIN_SECRET_KEY: "{{ bespin_api.secret_key }}"
-    BESPIN_STATIC_ROOT: "{{ bespin_api.static_root }}"
+  environment: "{{api_environment}}"
 
 - name: Setup apache config
   blockinfile:
@@ -47,47 +57,32 @@
           Require all granted
         </Files>
       </Directory>
-      SetEnv BESPIN_SECRET_KEY "{{ bespin_api.secret_key }}"
-      SetEnv BESPIN_ALLOWED_HOST "{{ bespin_api.allowed_host }}"
-      SetEnv BESPIN_DB_NAME "{{ bespin_api.db_name }}"
-      SetEnv BESPIN_DB_USER "{{ bespin_api.db_user }}"
-      SetEnv BESPIN_DB_PASSWORD "{{ bespin_api.db_password }}"
-      SetEnv BESPIN_DB_HOST "{{ bespin_api.db_host }}"
-      SetEnv BESPIN_CORS_HOST "{{ bespin_api.cors_host }}"
-      SetEnv BESPIN_STATIC_ROOT "{{ bespin_api.static_root }}"
+      SetEnv BESPIN_SECRET_KEY "{{ bespin_settings.api.secret_key }}"
+      SetEnv BESPIN_ALLOWED_HOST "{{ bespin_settings.api.allowed_host }}"
+      SetEnv BESPIN_CORS_HOST "{{ bespin_settings.api.cors_host }}"
+      SetEnv BESPIN_STATIC_ROOT /srv/static
+      SetEnv BESPIN_DB_NAME "{{ bespin_settings.database.name }}"
+      SetEnv BESPIN_DB_USER "{{ bespin_settings.database.username }}"
+      SetEnv BESPIN_DB_PASSWORD "{{ bespin_settings.database.password }}"
+      SetEnv BESPIN_DB_HOST "{{ bespin_settings.database.host }}"
+
 
 - name: Setup database
   command: python manage.py migrate --settings=bespin.settings_prod
   args:
     chdir: /srv/bespin_api/
-  environment:
-    BESPIN_SECRET_KEY: "{{ bespin_api.secret_key }}"
-    BESPIN_ALLOWED_HOST: "{{ bespin_api.allowed_host }}"
-    BESPIN_DB_NAME: "{{ bespin_api.db_name }}"
-    BESPIN_DB_USER: "{{ bespin_api.db_user }}"
-    BESPIN_DB_PASSWORD: "{{ bespin_api.db_password }}"
-    BESPIN_DB_HOST: "{{ bespin_api.db_host }}"
-    BESPIN_CORS_HOST: "{{ bespin_api.cors_host }}"
-    BESPIN_STATIC_ROOT: "{{ bespin_api.static_root }}"
+  environment: "{{api_environment}}"
 
 - stat:
     path: /srv/created_lando_user
   register: created_lando_user
 
 - name: Create lando user with token
-  command: python manage.py makeusertoken --settings=bespin.settings_prod {{ bespin_api.lando_username }} {{ bespin_api.lando_password }} {{ bespin_api.lando_token }}
+  command: python manage.py makeusertoken --settings=bespin.settings_prod {{ bespin_settings.api.lando_username }} {{ bespin_settings.api.lando_password }} {{ bespin_settings.api.lando_token }}
   run_once: true
   args:
     chdir: /srv/bespin_api/
-  environment:
-    BESPIN_SECRET_KEY: "{{ bespin_api.secret_key }}"
-    BESPIN_ALLOWED_HOST: "{{ bespin_api.allowed_host }}"
-    BESPIN_DB_NAME: "{{ bespin_api.db_name }}"
-    BESPIN_DB_USER: "{{ bespin_api.db_user }}"
-    BESPIN_DB_PASSWORD: "{{ bespin_api.db_password }}"
-    BESPIN_DB_HOST: "{{ bespin_api.db_host }}"
-    BESPIN_CORS_HOST: "{{ bespin_api.cors_host }}"
-    BESPIN_STATIC_ROOT: "{{ bespin_api.static_root }}"
+  environment: "{{api_environment}}"
   when: created_lando_user.stat.exists == False
 
 - file:
@@ -103,15 +98,7 @@
   run_once: true
   args:
     chdir: /srv/bespin_api/
-  environment:
-    BESPIN_SECRET_KEY: "{{ bespin_api.secret_key }}"
-    BESPIN_ALLOWED_HOST: "{{ bespin_api.allowed_host }}"
-    BESPIN_DB_NAME: "{{ bespin_api.db_name }}"
-    BESPIN_DB_USER: "{{ bespin_api.db_user }}"
-    BESPIN_DB_PASSWORD: "{{ bespin_api.db_password }}"
-    BESPIN_DB_HOST: "{{ bespin_api.db_host }}"
-    BESPIN_CORS_HOST: "{{ bespin_api.cors_host }}"
-    BESPIN_STATIC_ROOT: "{{ bespin_api.static_root }}"
+  environment: "{{api_environment}}"
   when: loaded_sample_data.stat.exists == False
 
 - file:
