--- a/bespin_api_database/tasks/main.yml
+++ b/bespin_api_database/tasks/main.yml
@@ -4,26 +4,32 @@
 - name: Install Postgres packages
   apt: name={{item}}
   with_items:
-    - postgresql
+    - postgresql-9.5
     - libpq-dev
     - python-psycopg2
 
 - name: Create our database
   become_user: postgres
-  postgresql_db: name={{bespin_api_database.dbname}}
+  postgresql_db: name={{ bespin_settings.database.name }}
 
 - name: ensure user has access to database
   become_user: postgres
-  postgresql_user: db={{bespin_api_database.dbname}} name={{bespin_api_database.username}} password={{bespin_api_database.password}} priv=ALL
+  postgresql_user:
+    db: "{{ bespin_settings.database.name }}"
+    name: "{{ bespin_settings.database.username }}"
+    password: "{{ bespin_settings.database.password }}"
+    priv: ALL
 
-- lineinfile:
+- name: Allow postgres to accept external connections
+  lineinfile:
     dest: /etc/postgresql/9.5/main/postgresql.conf
     line: "listen_addresses = '*'"
 
-- lineinfile:
+- name: Have postgres check the password for external connections
+  lineinfile:
     dest: /etc/postgresql/9.5/main/pg_hba.conf
     line: 'host     all             all         0.0.0.0/0          md5'
 
-- name: restart postgres
+- name: Restart postgres with the new settings
   command: /usr/lib/postgresql/9.5/bin/pg_ctl -D /var/lib/postgresql/9.5/main restart
   become_user: postgres
