--- a/bespin_ui/tasks/main.yml
+++ b/bespin_ui/tasks/main.yml
@@ -1,62 +1,33 @@
-- name: Set node Version
-  set_fact:
-    node_version: 'node-v6.9.5-linux-x64'
-
-- name: Set node URL
-  set_fact:
-    node_url: "https://nodejs.org/dist/v6.9.5/{{ node_version }}.tar.xz"
-
-- name: Set node Command
-  set_fact:
-    node_cmd: "/tmp/{{ node_version }}/bin/node"
-
-- name: Set npm Command
-  set_fact:
-    npm_cmd: "/tmp/{{ node_version }}/bin/npm"
-
-- name: Set node_bin dir
-  set_fact:
-    node_bin: "/tmp/{{ node_version }}/bin"
-
 - name: Install apache2 packages
   apt: name={{item}}
   with_items:
     - apache2
 
-- name: Download and extract stable nodejs release 6.9.5
-  unarchive:
-    src: "{{ node_url }}"
-    dest: /tmp
-    remote_src: True
-
 - git:
     repo: https://github.com/Duke-GCB/bespin-ui.git
     dest: /src/bespin-ui
     force: yes
+  become: Yes
+  become_user: ubuntu
 
 - file:
     path: /src/bespin-ui
     owner: ubuntu
     state: directory
+    recurse: yes
     mode: 0755
 
 - name: install bower
   command: npm install -g bower
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ node_bin }}"
 
 - name: install ember-cli
   command: npm install -g ember-cli
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ node_bin }}"
 
 - name: install npm packages
   command: npm install
   args:
     chdir: /src/bespin-ui
     creates: /tmp/bespin-ui/node_modules
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ node_bin }}"
 
 - name: install bower packages
   command: bower install
@@ -65,10 +36,10 @@
   args:
     chdir: /src/bespin-ui
     creates: /tmp/bespin-ui/bower_components
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ node_bin }}"
 
 - name: Setup api server config
+  become: Yes
+  become_user: ubuntu
   lineinfile:
     dest: /src/bespin-ui/config/environment.js
     regexp: 'ENV.APP.API_HOST = '
@@ -77,11 +48,10 @@
 
 - name: build bespin ui
   command: ember build --environment production
+  become: Yes
+  become_user: ubuntu
   args:
     chdir: /src/bespin-ui
-    creates: /tmp/bespin-ui/node_modules
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ node_bin }}"
 
 - name: copy ember website
   command: 'bash -c "cp -r /src/bespin-ui/dist/* /var/www/html"'
