--- a/bespin_lando_worker/tasks/main.yml
+++ b/bespin_lando_worker/tasks/main.yml
@@ -53,7 +53,7 @@
 - name: set mountpoints
   mount:
     name: /data
-    src: 192.168.2.8:/mnt/bespin_datasets
+    src: bespin-nfs:/mnt/bespin_datasets
     fstype: nfs
     opts: ro,sync,hard,intr
     state: mounted
