--- a/hpc/files/slurm.conf
+++ b/hpc/files/slurm.conf
@@ -162,13 +162,14 @@ SlurmdDebug=3
 #
 #
 # COMPUTE NODES
-NodeName=c1-0[1-8]-[1-4] Sockets=2 CoresPerSocket=8 ThreadsPerCore=2 RealMemory=127995 State=UNKNOWN
+NodeName=c1-[01-08]-[1-4] Sockets=2 CoresPerSocket=8 ThreadsPerCore=2 RealMemory=127995 State=UNKNOWN
 NodeName=c1-[09-10]-[1-4] Sockets=2 CoresPerSocket=8 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
-NodeName=x1-0[1-3]-[1-4] Sockets=2 CoresPerSocket=14 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
-NodeName=x2-0[1-8]-[1-4] Sockets=2 CoresPerSocket=14 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
+NodeName=x1-[01-03]-[1-4] Sockets=2 CoresPerSocket=14 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
+NodeName=x2-[01-08]-[1-4] Sockets=2 CoresPerSocket=14 ThreadsPerCore=2 RealMemory=257182 State=UNKNOWN
 NodeName=dl-01 Sockets=4 CoresPerSocket=10 ThreadsPerCore=2 RealMemory=1032809 State=UNKNOWN
 
 # PARTITIONS
-PartitionName=all          Nodes=c1-[02-10]-[1-4],x2-0[1-8]-[1-4],dl-01 Priority=40 Default=YES  MaxTime=INFINITE State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab,harteminklab,wraycompute
+PartitionName=all          Nodes=c1-[02-04]-[1-4],c1-[06-10]-[1-4],x2-0[1-8]-[1-4],dl-01 Priority=40 Default=YES  MaxTime=INFINITE State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab,harteminklab,wraycompute
 PartitionName=interactive  Nodes=c1-01-[1,3-4]            Priority=40 Default=NO  MaxTime=1-0 State=UP AllowAccounts=allenlab,cgsu,davelab,davidlab,dci_bioinfo,dppp_hardac,engelhardtlab,gersbachlab,ginsburglab,itlab,kolab,macalpinelab,mukherjeelab,murphylab,omicscore,phenoscape,reddylab,seqcore,tunglab,youlab,baughlab,gems,crawfordlab,gordanlab,harteminklab,wraycompute
-PartitionName=new          Nodes=x1-0[1-3]-[1-4] Priority=40 Default=NO MaxTime=INFINITE State=UP AllowAccounts=reddylab,itlab
+PartitionName=contest Nodes=c1-05-[1-4]            Priority=40 Default=NO  MaxTime=1-0 State=UP AllowAccounts=itlab
+PartitionName=new          Nodes=x1-[01-03]-[1-4] Priority=40 Default=NO MaxTime=INFINITE State=UP AllowAccounts=reddylab,itlab
